--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "mongoose": "^6.4.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
